--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: executing remote ssh commands using password
-      uses: ./
+      uses: ad-m/github-push-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
